--- a/src/scss/hook.scss
+++ b/src/scss/hook.scss
@@ -9,6 +9,7 @@ $info: #24c5f7;
   padding: 0.6rem 1.3rem;
   cursor: pointer;
   border-radius: 4px;
+  margin-inline: 0.2rem;
 
   &.hook-btn-primary {
     color: #f2f2f2;
@@ -23,6 +24,11 @@ $info: #24c5f7;
     &:focus {
       box-shadow: 0 0 0.5rem rgba($primary, $alpha: $BtnHoverOpacity);
       background-color: rgba($primary, $alpha: $BtnHoverOpacity);
+    }
+
+    &.click {
+      box-shadow: 0 0 1rem rgba($primary, $alpha: 1);
+      // background-color: rgba($primary, $alpha: $BtnHoverOpacity);
     }
   }
 
